# agent/src/model.rs
@@ -1,5 +1,6 @@
 // Copyright 2021 Oxide Computer Company
 
+use chrono::prelude::*;
 use schemars::JsonSchema;
 use serde::{Deserialize, Serialize};
 
@@ -17,13 +18,92 @@ pub enum State {
 pub struct Region {
     pub id: RegionId,
     pub volume_id: String,
+    pub state: State,
 
+    // Creation parameters
     pub block_size: u64,
     pub extent_size: u64,
     pub extent_count: u64,
+    pub encrypted: bool,
 
+    // Run-time parameters
     pub port_number: u16,
-    pub state: State,
+    pub cert_pem: Option<String>,
+
+    // TODO should skip serializing this on list regions response, but this
+    // causes crucible.json to not have it
+    // #[serde(skip_serializing)]
+    pub key_pem: Option<String>,
+
+    pub root_pem: Option<String>,
+}
+
+use crucible_smf::scf_type_t::{self, *};
+use std::path::Path;
+
+pub struct SmfProperty<'a> {
+    pub name: &'a str,
+    pub typ: scf_type_t,
+    pub val: String,
+}
+
+impl Region {
+    /**
+     * Given a root directory, return a list of SMF properties to ensure for
+     * the corresponding running instance.
+     */
+    pub fn get_smf_properties(&self, dir: &Path) -> Vec<SmfProperty> {
+        let mut results = vec![
+            SmfProperty {
+                name: "directory",
+                typ: SCF_TYPE_ASTRING,
+                val: dir.to_str().unwrap().to_string(),
+            },
+            SmfProperty {
+                name: "port",
+                typ: SCF_TYPE_COUNT,
+                val: self.port_number.to_string(),
+            },
+        ];
+
+        if self.cert_pem.is_some() {
+            let mut path = dir.to_path_buf();
+            path.push("cert.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            results.push(SmfProperty {
+                name: "cert_pem_path",
+                typ: SCF_TYPE_ASTRING,
+                val: path,
+            });
+        }
+
+        if self.key_pem.is_some() {
+            let mut path = dir.to_path_buf();
+            path.push("key.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            results.push(SmfProperty {
+                name: "key_pem_path",
+                typ: SCF_TYPE_ASTRING,
+                val: path,
+            });
+        }
+
+        if self.root_pem.is_some() {
+            let mut path = dir.to_path_buf();
+            path.push("root.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            results.push(SmfProperty {
+                name: "root_pem_path",
+                typ: SCF_TYPE_ASTRING,
+                val: path,
+            });
+        }
+
+        results
+    }
 }
 
 #[derive(Serialize, Deserialize, JsonSchema, Debug, PartialEq, Clone)]
@@ -34,6 +114,12 @@ pub struct CreateRegion {
     pub block_size: u64,
     pub extent_size: u64,
     pub extent_count: u64,
+    pub encrypted: bool,
+
+    pub cert_pem: Option<String>,
+    pub key_pem: Option<String>,
+    pub root_pem: Option<String>,
+    // TODO base64 encoded der too?
 }
 
 impl CreateRegion {
@@ -58,6 +144,11 @@ impl CreateRegion {
                 "extent count {} instead of requested {}",
                 self.extent_count, r.extent_count
             ))
+        } else if self.encrypted != r.encrypted {
+            Some(format!(
+                "encrypted {} instead of requested {}",
+                self.encrypted, r.encrypted
+            ))
         } else {
             None
         }
@@ -77,6 +168,108 @@ impl CreateRegion {
 )]
 pub struct RegionId(pub String);
 
+#[derive(Serialize, Deserialize, JsonSchema, Debug, PartialEq, Clone)]
+pub struct Snapshot {
+    pub name: String,
+    pub created: DateTime<Utc>,
+}
+
+#[derive(Serialize, Deserialize, JsonSchema, Debug, PartialEq, Clone)]
+pub struct RunningSnapshot {
+    pub id: RegionId,
+    pub name: String,
+    pub port_number: u16,
+    pub state: State,
+}
+
+impl RunningSnapshot {
+    /**
+     * Given a root directory, return a list of SMF properties to ensure for
+     * the corresponding running instance.
+     */
+    pub fn get_smf_properties(&self, dir: &Path) -> Vec<SmfProperty> {
+        let mut results = vec![
+            SmfProperty {
+                name: "directory",
+                typ: SCF_TYPE_ASTRING,
+                val: dir.to_str().unwrap().to_string(),
+            },
+            SmfProperty {
+                name: "port",
+                typ: SCF_TYPE_COUNT,
+                val: self.port_number.to_string(),
+            },
+        ];
+
+        // Test for X509 files in snapshot - note this means that running
+        // snapshots will use the X509 information in the snapshot, not a new
+        // set.
+        {
+            let mut path = dir.to_path_buf();
+            path.push("cert.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            if Path::new(&path).exists() {
+                results.push(SmfProperty {
+                    name: "cert_pem_path",
+                    typ: SCF_TYPE_ASTRING,
+                    val: path,
+                });
+            }
+        }
+
+        {
+            let mut path = dir.to_path_buf();
+            path.push("key.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            if Path::new(&path).exists() {
+                results.push(SmfProperty {
+                    name: "key_pem_path",
+                    typ: SCF_TYPE_ASTRING,
+                    val: path,
+                });
+            }
+        }
+
+        {
+            let mut path = dir.to_path_buf();
+            path.push("root.pem");
+            let path = path.into_os_string().into_string().unwrap();
+
+            if Path::new(&path).exists() {
+                results.push(SmfProperty {
+                    name: "root_pem_path",
+                    typ: SCF_TYPE_ASTRING,
+                    val: path,
+                });
+            }
+        }
+
+        results
+    }
+}
+
+pub struct CreateRunningSnapshotRequest {
+    pub id: RegionId,
+    pub name: String,
+    pub cert_pem: Option<String>,
+    pub key_pem: Option<String>,
+    pub root_pem: Option<String>,
+}
+
+#[derive(Serialize, Deserialize, JsonSchema, Debug, PartialEq, Clone)]
+pub struct DeleteRunningSnapshotRequest {
+    pub id: RegionId,
+    pub name: String,
+}
+
+#[derive(Serialize, Deserialize, JsonSchema, Debug, PartialEq, Clone)]
+pub struct DeleteSnapshotRequest {
+    pub id: RegionId,
+    pub name: String,
+}
+
 #[cfg(test)]
 mod test {
     use super::*;
@@ -91,6 +284,10 @@ mod test {
             block_size: 4096,
             extent_size: 4096,
             extent_count: 100,
+            encrypted: false,
+            cert_pem: None,
+            key_pem: None,
+            root_pem: None,
         };
 
         let s = serde_json::to_string(&r).expect("serialise");
