# agent/src/server.rs
@@ -1,5 +1,4 @@
 // Copyright 2021 Oxide Computer Company
-
 use super::datafile::DataFile;
 use super::model;
 use anyhow::{anyhow, Result};
@@ -8,8 +7,9 @@ use dropshot::{
     Path as TypedPath, RequestContext, TypedBody,
 };
 use schemars::JsonSchema;
-use serde::Deserialize;
+use serde::{Deserialize, Serialize};
 use slog::{o, Logger};
+use std::collections::BTreeMap;
 use std::net::SocketAddr;
 use std::result::Result as SResult;
 use std::sync::Arc;
@@ -31,7 +31,7 @@ impl<T> AnyhowFromString<T> for SResult<T, String> {
 async fn region_list(
     rc: Arc<RequestContext<Arc<DataFile>>>,
 ) -> SResult<HttpResponseOk<Vec<model::Region>>, HttpError> {
-    Ok(HttpResponseOk(rc.context().all()))
+    Ok(HttpResponseOk(rc.context().regions()))
 }
 
 #[endpoint {
@@ -44,7 +44,7 @@ async fn region_create(
 ) -> SResult<HttpResponseOk<model::Region>, HttpError> {
     let create = body.into_inner();
 
-    match rc.context().request(create) {
+    match rc.context().create_region_request(create) {
         Ok(r) => Ok(HttpResponseOk(r)),
         Err(e) => Err(HttpError::for_internal_error(format!(
             "region create failure: {:?}",
@@ -87,20 +87,291 @@ async fn region_delete(
 ) -> SResult<HttpResponseDeleted, HttpError> {
     let p = path.into_inner();
 
+    // Cannot delete a region that's backed by a ZFS dataset if there are
+    // snapshots.
+
+    let snapshots = match rc.context().get_snapshots_for_region(&p.id) {
+        Ok(results) => results,
+        Err(e) => {
+            return Err(HttpError::for_internal_error(e.to_string()));
+        }
+    };
+
+    if !snapshots.is_empty() {
+        return Err(HttpError::for_bad_request(
+            None,
+            "must delete snapshots first!".to_string(),
+        ));
+    }
+
     match rc.context().destroy(&p.id) {
         Ok(_) => Ok(HttpResponseDeleted()),
         Err(e) => Err(HttpError::for_bad_request(None, e.to_string())),
     }
 }
 
+#[derive(Serialize, JsonSchema)]
+pub struct GetSnapshotResponse {
+    snapshots: Vec<model::Snapshot>,
+    running_snapshots: BTreeMap<String, model::RunningSnapshot>,
+}
+
+#[endpoint {
+    method = GET,
+    path = "/crucible/0/regions/{id}/snapshots",
+}]
+async fn region_get_snapshots(
+    rc: Arc<RequestContext<Arc<DataFile>>>,
+    path: TypedPath<RegionPath>,
+) -> Result<HttpResponseOk<GetSnapshotResponse>, HttpError> {
+    let p = path.into_inner();
+
+    match rc.context().get(&p.id) {
+        Some(_) => (),
+        None => {
+            return Err(HttpError::for_not_found(
+                None,
+                format!("region {:?} not found", p.id),
+            ));
+        }
+    }
+
+    let snapshots = match rc.context().get_snapshots_for_region(&p.id) {
+        Ok(results) => results,
+        Err(e) => {
+            return Err(HttpError::for_internal_error(e.to_string()));
+        }
+    };
+
+    let running_snapshots = rc
+        .context()
+        .running_snapshots()
+        .get(&p.id)
+        .cloned()
+        .unwrap_or_default();
+
+    Ok(HttpResponseOk(GetSnapshotResponse {
+        snapshots,
+        running_snapshots,
+    }))
+}
+
+#[derive(Deserialize, JsonSchema)]
+struct GetSnapshotPath {
+    id: model::RegionId,
+    name: String,
+}
+
+#[endpoint {
+    method = GET,
+    path = "/crucible/0/regions/{id}/snapshots/{name}",
+}]
+async fn region_get_snapshot(
+    rc: Arc<RequestContext<Arc<DataFile>>>,
+    path: TypedPath<GetSnapshotPath>,
+) -> Result<HttpResponseOk<model::Snapshot>, HttpError> {
+    let p = path.into_inner();
+
+    match rc.context().get(&p.id) {
+        Some(_) => (),
+        None => {
+            return Err(HttpError::for_not_found(
+                None,
+                format!("region {:?} not found", p.id),
+            ));
+        }
+    }
+
+    let snapshots_for_region =
+        match rc.context().get_snapshots_for_region(&p.id) {
+            Ok(results) => results,
+            Err(e) => {
+                return Err(HttpError::for_internal_error(e.to_string()));
+            }
+        };
+
+    for snapshot in &snapshots_for_region {
+        if snapshot.name == p.name {
+            return Ok(HttpResponseOk(snapshot.clone()));
+        }
+    }
+
+    Err(HttpError::for_not_found(
+        None,
+        format!("region {:?} snapshot {:?} not found", p.id, p.name),
+    ))
+}
+
+#[derive(Deserialize, JsonSchema)]
+struct DeleteSnapshotPath {
+    id: model::RegionId,
+    name: String,
+}
+
+#[endpoint {
+    method = DELETE,
+    path = "/crucible/0/regions/{id}/snapshots/{name}",
+}]
+async fn region_delete_snapshot(
+    rc: Arc<RequestContext<Arc<DataFile>>>,
+    path: TypedPath<DeleteSnapshotPath>,
+) -> Result<HttpResponseDeleted, HttpError> {
+    let p = path.into_inner();
+
+    match rc.context().get(&p.id) {
+        Some(_) => (),
+        None => {
+            return Err(HttpError::for_not_found(
+                None,
+                format!("region {:?} not found", p.id),
+            ));
+        }
+    }
+
+    let request = model::DeleteSnapshotRequest {
+        id: p.id.clone(),
+        name: p.name,
+    };
+
+    match rc.context().delete_snapshot(request) {
+        Ok(_) => Ok(HttpResponseDeleted()),
+        Err(e) => Err(HttpError::for_internal_error(e.to_string())),
+    }
+}
+
+#[derive(Deserialize, JsonSchema)]
+struct RunSnapshotPath {
+    id: model::RegionId,
+    name: String,
+}
+
+#[endpoint {
+    method = POST,
+    path = "/crucible/0/regions/{id}/snapshots/{name}/run",
+}]
+async fn region_run_snapshot(
+    rc: Arc<RequestContext<Arc<DataFile>>>,
+    path: TypedPath<RunSnapshotPath>,
+) -> Result<HttpResponseOk<model::RunningSnapshot>, HttpError> {
+    let p = path.into_inner();
+
+    match rc.context().get(&p.id) {
+        Some(_) => (),
+        None => {
+            return Err(HttpError::for_not_found(
+                None,
+                format!("region {:?} not found", p.id),
+            ));
+        }
+    }
+
+    let snapshots = match rc.context().get_snapshots_for_region(&p.id) {
+        Ok(results) => results,
+        Err(e) => {
+            return Err(HttpError::for_internal_error(e.to_string()));
+        }
+    };
+
+    let snapshot_names: Vec<String> =
+        snapshots.iter().map(|s| s.name.clone()).collect();
+
+    if !snapshot_names.contains(&p.name) {
+        return Err(HttpError::for_not_found(
+            None,
+            format!("snapshot {:?} not found", p.name),
+        ));
+    }
+
+    let create = model::CreateRunningSnapshotRequest {
+        id: p.id,
+        name: p.name,
+        cert_pem: None, // XXX
+        key_pem: None,
+        root_pem: None,
+    };
+
+    match rc.context().create_running_snapshot_request(create) {
+        Ok(r) => Ok(HttpResponseOk(r)),
+        Err(e) => Err(HttpError::for_internal_error(format!(
+            "running snapshot create failure: {:?}",
+            e
+        ))),
+    }
+}
+
+#[endpoint {
+    method = DELETE,
+    path = "/crucible/0/regions/{id}/snapshots/{name}/run",
+}]
+async fn region_delete_running_snapshot(
+    rc: Arc<RequestContext<Arc<DataFile>>>,
+    path: TypedPath<RunSnapshotPath>,
+) -> Result<HttpResponseDeleted, HttpError> {
+    let p = path.into_inner();
+
+    match rc.context().get(&p.id) {
+        Some(_) => (),
+        None => {
+            return Err(HttpError::for_not_found(
+                None,
+                format!("region {:?} not found", p.id),
+            ));
+        }
+    }
+
+    let snapshots = match rc.context().get_snapshots_for_region(&p.id) {
+        Ok(results) => results,
+        Err(e) => {
+            return Err(HttpError::for_internal_error(e.to_string()));
+        }
+    };
+
+    let snapshot_names: Vec<String> =
+        snapshots.iter().map(|s| s.name.clone()).collect();
+
+    if !snapshot_names.contains(&p.name) {
+        return Err(HttpError::for_not_found(
+            None,
+            format!("snapshot {:?} not found", p.name),
+        ));
+    }
+
+    let request = model::DeleteRunningSnapshotRequest {
+        id: p.id,
+        name: p.name,
+    };
+
+    match rc.context().delete_running_snapshot_request(request) {
+        Ok(_) => Ok(HttpResponseDeleted()),
+        Err(e) => Err(HttpError::for_internal_error(format!(
+            "running snapshot create failure: {:?}",
+            e
+        ))),
+    }
+}
+
 pub fn make_api() -> Result<dropshot::ApiDescription<Arc<DataFile>>> {
     let mut api = dropshot::ApiDescription::new();
+
     api.register(region_list).or_bail("registration failure")?;
     api.register(region_create)
         .or_bail("registration failure")?;
     api.register(region_get).or_bail("registration failure")?;
     api.register(region_delete)
         .or_bail("registration failure")?;
+
+    api.register(region_get_snapshots)
+        .or_bail("registration failure")?;
+    api.register(region_get_snapshot)
+        .or_bail("registration failure")?;
+    api.register(region_delete_snapshot)
+        .or_bail("registration failure")?;
+
+    api.register(region_run_snapshot)
+        .or_bail("registration failure")?;
+    api.register(region_delete_running_snapshot)
+        .or_bail("registration failure")?;
+
     Ok(api)
 }
 
@@ -114,6 +385,7 @@ pub async fn run_server(
     let server = dropshot::HttpServerStarter::new(
         &dropshot::ConfigDropshot {
             bind_address,
+            request_body_max_bytes: 1024 * 10,
             ..Default::default()
         },
         api,
